//
// Copyright 2015, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package lobby.registration.seats;

option java_package="lobby.registration.seats";
option java_outer_classname = "SeatsAvailabilityProto";
option java_multiple_files = true;

import "spine/base/person.proto";
import "spine/base/email.proto";
import "lobby/registration/conference.proto";

// The availability of the conference seats.
message SeatsAvailability {
    // The map from a seat type id to an available quantity of seats.
    // NOTE: the SeatTypeId cannot be used as a map key due to Protobuf restrictions.
    map<string, int32> seats_available = 1;

    // The map from a reservation request id to seat items.
    // NOTE: the ReservationId cannot be used as a map key due to Protobuf restrictions.
    map<string, SeatQuantities> pending_reservations = 2;
}

// The set of seat items representing seat quantities of different types.
message SeatQuantities {
    repeated SeatQuantity item = 1;
}

// The quantity of seats of the given type.
message SeatQuantity {
    // The seat type id.
    SeatTypeId seat_type_id = 1;

    // The quantity of seats of the given type.
    int32 quantity = 2;
}

// Associates an attendee with a seat in a confirmed order.
message SeatAssignment {
    // The seat type for the attendee.
    SeatTypeId seat_type_id = 1;

    // The personal info of the attendee.
    PersonalInfo attendee = 2;
}

// The info about a person.
message PersonalInfo {
    // The person's name.
    spine.base.PersonName name = 1;

    // The person's email.
    spine.base.EmailAddress email = 2;
}

// The id of the reservation based on the UUID.
message ReservationId {
    // The UUID-based value of the reservation ID.
    string uuid = 1;
}
